<resources>
    <string name="app_name" translatable="false">sms LockDown</string>

    //sms cases
    <string name="sms1" translatable="true">Φαρμακείο, Γιατρός, Νοσοκομείο, Κέντρο Υγείας</string>
    <string name="sms2" translatable="true">Σούπερ Μάρκετ</string>
    <string name="sms3" translatable="true">Τράπεζα, Δημόσια Υπηρεσία</string>
    <string name="sms4" translatable="true">Παροχή Βοήθειας, Μεταφορά Συζύγου, Συνοδεία Μαθητή</string>
    <string name="sms5" translatable="true">Κηδεία, Γάμος, Βάφτιση, Επικοινωνία Διαζευγμένων Γονέων</string>
    <string name="sms6" translatable="true">Σωματική άσκηση, Κίνηση με κατοικίδιο ζώο, Σίτιση Αδέσποτων ζώων</string>

    //sms descriptions
    <string-array name="sms_desc">
        <item>Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται ύστερα από σχετική επικοινωνία</item>
        <item>Μετάβαση σε εν λειτουργία κατάστημα ή σε σημείο προμηθειών αγαθών πρώτης ανάγκης (σούπερ μάρκετ, μίνι μάρκετ, κρεοπωλείο), όπου δεν είναι δυνατή η αποστολή τους. </item>
        <item>Μετάβαση σε δημόσια υπηρεσία (π.χ. εφορία) ή τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.</item>
        <item>Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανήλικων μαθητών από/προς το σχολείο.</item>
        <item>Μετάβαση σε τελετή κηδείας υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.</item>
        <item>Σωματική άσκηση σε εξωτερικό χώρο ή κίνηση με κατοικίδιο ζώο, ατομικά ή ανά δύο άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου.</item>
    </string-array>
<!--    <string name="sms1_desc" translatable="true">Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται ύστερα από σχετική επικοινωνία </string>-->
<!--    <string name="sms2_desc" translatable="true">Μετάβαση σε εν λειτουργία κατάστημα ή σε σημείο προμηθειών αγαθών πρώτης ανάγκης (σούπερ μάρκετ, μίνι μάρκετ, κρεοπωλείο), όπου δεν είναι δυνατή η αποστολή τους. </string>-->
<!--    <string name="sms3_desc" translatable="true">Μετάβαση σε δημόσια υπηρεσία (π.χ. εφορία) ή τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.</string>-->
<!--    <string name="sms4_desc" translatable="true">Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανήλικων μαθητών από/προς το σχολείο.</string>-->
<!--    <string name="sms5_desc" translatable="true">Μετάβαση σε τελετή κηδείας υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.</string>-->
<!--    <string name="sms6_desc" translatable="true">Σωματική άσκηση σε εξωτερικό χώρο ή κίνηση με κατοικίδιο ζώο, ατομικά ή ανά δύο άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου.</string>-->

    // editext hints
    <string name="userName" translatable="true">Ονοματεπώνυμο</string>
    <string name="userAddress" translatable="true">Διεύθυνση</string>

    // Description TV
    <string name="description" translatable="true">Περιγραφή: </string>

    // edittext activity
    <string name="enter_user_button" translatable="true">Εισαγωγή Νέου Χρήστη </string>
    <string name="delete_button_text" translatable="true">Διαγραφή Χρήστη</string>
    <string name="send">Αποστολή SMS</string>
    <string name="new_user">Νέος Χρήστης</string>

    //toasts
    <string name="toast_user_delete_success" translatable="true">Επιτυχής Διαγραφή Χρήστη</string>
    <string name="toast_user_delete_error" translatable="false">Error...</string>
    <string name="error_saving_user">Παρακαλώ συμπληρώστε όλα τα πεδία</string>
    <string name="no_user_available" translatable="false">Please open the App and enter a User</string>
    <string name="title_activity_maps">Map</string>
    <string name="selected_user" translatable="true">Επιλεγμένος Χρήστης:</string>
    <string name="pick_user_list" translatable="true">Ή επιλέξτε χρήστη από το Ιστορικό:</string>

    //dialog alert
    <string name="dialog_save" translatable="true">Αποθήκευση</string>
    <string name="dialog_locate">Εντοπισμός</string>
    <string name="dialog_cancel">Ακύρωση</string>
    <string name="user_confirm">Επιβεβαίωση</string>

</resources>
